--- a/front/src/app/exercises/exercise-form-dialog/exercise-form-dialog.component.html
+++ b/front/src/app/exercises/exercise-form-dialog/exercise-form-dialog.component.html
@@ -70,6 +70,12 @@
                     <!--</md-chip-list>-->
                     <!--</div>-->
                 </div>
+                <div class="col-md-12 pt-2">
+                        <span class="text-w-300 titleWorkedMuscles">
+                            Ajout d'un nouveau muscle travaillé
+                        </span>
+                    <hr>
+                </div>
                 <pulpe-select-worked-muscle (muscleAdded)="addWorkedMuscle($event)"></pulpe-select-worked-muscle>
                 <div class="col-md-12 pt-4">
                     <div class="row">
