--- a/front/src/app/machines/machines.component.html
+++ b/front/src/app/machines/machines.component.html
@@ -36,8 +36,8 @@
                 <th class="text-white text-center text-light-weight text-uppercase"></th>
             </tr>
             </thead>
-            <tbody *ngFor="let machine of machines | filterMachines: filterArgs">
-            <tr class="my-auto text-center">
+            <tbody>
+            <tr *ngFor="let machine of machines | filterMachines: filterArgs" class="my-auto text-center">
                 <td>{{machine.name}}</td>
                 <td>
                     <div class="row iconsList pull-right">
