--- a/front/src/app/shared/form/chips-removable-worked-muscle/chips-removable-worked-muscle.component.html
+++ b/front/src/app/shared/form/chips-removable-worked-muscle/chips-removable-worked-muscle.component.html
@@ -30,6 +30,6 @@
 </div>
 <ng-template #empty>
     <div class="col-md-12 pt-1">
-        <p>Aucun muscle travaillé pour cet exercice</p>
+        <p>Aucun muscle travaillé</p>
     </div>
 </ng-template>
