--- a/front/src/app/shared/dialogs/delete-dialog/delete-dialog.component.html
+++ b/front/src/app/shared/dialogs/delete-dialog/delete-dialog.component.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button class="btn btn-primary" type="button" (click)="delete()">Supprimer</button>
+            <button class="btn btn-primary" type="button" (click)="confirm()">Supprimer</button>
             <button type="button" class="btn btn-default" (click)="close()">Annuler</button>
         </div>
     </div>
