--- a/front/src/app/machines/machines.component.html
+++ b/front/src/app/machines/machines.component.html
@@ -1,28 +1,13 @@
 <div [@fadeIn]>
-    <pulpe-page-title
-            [title]="'Liste des machines'">
+    <pulpe-page-title [title]="'Liste des machines'">
     </pulpe-page-title>
 
-    <div class="row">
-        <md-card class="col-md-12">
-            <div class="row">
-                <div class="col-md-2 text-center my-auto separatorVertical">
-                    <span class="ion ion-podium machinesIcon"></span>
-                    <div class="text-light-weight">
-                        <strong class="text-primary">{{machines.length}}</strong> Machines
-                    </div>
-                </div>
-                <div class="col-md-10">
-                    <div class="float-md-right text-center">
-                        <span class="ion ion-ios-search actionsIcon"></span>
-                        <md-input-container class="searchPlaceHolder font-weight-light">
-                            <input mdInput placeholder="Par nom" [(ngModel)]="filterArgs">
-                        </md-input-container>
-                    </div>
-                </div>
-            </div>
-        </md-card>
-    </div>
+    <pulpe-header-list [title]="'Machines'"
+                       [icon]="'ion ion-podium'"
+                       [nbElements]="machines.length"
+                       [placeHolderTitle]="'Par nom'"
+                       (filterArgs)="filterArgsChanged($event)">
+    </pulpe-header-list>
 
     <div class="row pt-3">
         <md-card class="col-md-12 my-auto text-center" *ngIf="machines.length === 0">
