--- a/front/src/app/members/members.component.html
+++ b/front/src/app/members/members.component.html
@@ -3,26 +3,13 @@
             [title]="'Liste des adhérents'">
     </pulpe-page-title>
 
-    <div class="row">
-        <md-card class="col-md-12">
-            <div class="row">
-                <div class="col-md-2 text-center my-auto separatorVertical">
-                    <span class="ion ion-person-stalker usersIcon"></span>
-                    <div class="text-light-weight">
-                        <strong class="text-primary">{{members.length}}</strong> Adhérents
-                    </div>
-                </div>
-                <div class="col-md-10">
-                    <div class="float-md-right text-center">
-                        <span class="ion ion-ios-search actionsIcon"></span>
-                        <md-input-container class="searchPlaceHolder font-weight-light">
-                            <input mdInput placeholder="Par nom, prénom" [(ngModel)]="filterArgs">
-                        </md-input-container>
-                    </div>
-                </div>
-            </div>
-        </md-card>
-    </div>
+    <pulpe-header-list [title]="'Adhérents'"
+                       [icon]="'ion ion-person-stalker'"
+                       [nbElements]="members.length"
+                       [placeHolderTitle]="'Par nom, prénom'"
+                       (filterArgs)="filterArgsChanged($event)">
+    </pulpe-header-list>
+
 
     <div class="row pt-3">
         <md-card class="col-md-12 my-auto text-center" *ngIf="members.length === 0">
