--- a/front/src/app/shared/dialogs/delete-dialog/delete-dialog.component.html
+++ b/front/src/app/shared/dialogs/delete-dialog/delete-dialog.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="modal-body">
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center text-light-weight">
                     {{description}}
                 </div>
             </div>
