Refactor for edit profile

--- a/front/src/app/coach/members/members.component.html
+++ b/front/src/app/coach/members/members.component.html
@@ -36,7 +36,7 @@
                 </td>
                 <td>{{member.lastName}}</td>
                 <td>{{member.firstName}}</td>
-                <td>{{member.mail}}</td>
+                <td>{{member.email}}</td>
                 <td>{{member.birthDate | date:'dd/MM/yyyy'}}</td>
                 <td>
                     <img *ngIf="isMassGainer(member.objective)" mdTooltip="Prise de masse"
