--- a/front/src/app/coach/profile/profile-infos-coach/profile-infos-coach.component.html
+++ b/front/src/app/coach/profile/profile-infos-coach/profile-infos-coach.component.html
@@ -9,7 +9,7 @@
                         <i class="ion ion-email"></i>
                     </div>
                     <div class="col-md-6">
-                        <span class="text-infos">{{member.email}}</span>
+                        <span class="text-infos">{{coach.email}}</span>
                     </div>
                 </div>
                 <div class="row pt-4">
@@ -17,7 +17,7 @@
                         <i class="ion ion-person"></i>
                     </div>
                     <div class="col-md-6">
-                        <span class="text-infos">{{member.lastName}} {{member.firstName}}</span>
+                        <span class="text-infos">{{coach.lastName}} {{coach.firstName}}</span>
                     </div>
                 </div>
                 <div class="row pt-4">
@@ -25,7 +25,7 @@
                         <i class="ion ion-calendar"></i>
                     </div>
                     <div class="col-md-6">
-                        <span class="text-infos">{{member.birthDate | date: 'dd/MM/yyyy'}}</span>
+                        <span class="text-infos">{{coach.birthDate | date: 'dd/MM/yyyy'}}</span>
                     </div>
                 </div>
             </div>
