--- a/front/src/app/coach/profile/profile-coach.component.html
+++ b/front/src/app/coach/profile/profile-coach.component.html
@@ -1,3 +1,47 @@
-<p>
-  profile-coach works!
-</p>
+<div [@fadeIn]>
+    <pulpe-page-title
+            [title]="'Mon profil'">
+    </pulpe-page-title>
+
+    <div class="row mb-3">
+        <div class="col-md-6">
+            <pulpe-simple-counter-with-icon icoClass="ion ion-location"
+                                            label="Ma salle de sport"
+                                            icoBackgroundColor="green"
+                                            value="{{coach.gym.name}} - {{coach.gym.city}}">
+            </pulpe-simple-counter-with-icon>
+        </div>
+        <div class="col-md-6">
+            <pulpe-simple-counter-with-icon icoClass="ion ion-calendar"
+                                            label="Inscrit depuis le"
+                                            icoBackgroundColor="orange"
+                                            value="{{coach.createdAt | date : 'dd/MM/yyyy'}}">
+            </pulpe-simple-counter-with-icon>
+        </div>
+    </div>
+
+    <div class="row card-cascade-parent">
+        <div class="col-md-12">
+            <md-card class="pt-0 white">
+                <div class="row">
+                    <div class="col-md-4">
+                        <pulpe-profile-photo>
+                        </pulpe-profile-photo>
+                    </div>
+                    <div class="col-md-8">
+                        <pulpe-profile-infos-coach [coach]="coach">
+                        </pulpe-profile-infos-coach>
+                    </div>
+                </div>
+            </md-card>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12 pt-2 pb-2 btnBottomRight">
+            <button md-fab class="pull-right bg-secondary" (click)="openDialogEditMember()">
+                <i class="ion-edit edit"></i>
+            </button>
+        </div>
+    </div>
+</div>
