--- a/front/src/app/member/profile/profile.component.html
+++ b/front/src/app/member/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div [@fadeIn]>
     <pulpe-page-title
-            [title]="'Votre profil'">
+            [title]="'Mon profil'">
     </pulpe-page-title>
 
     <div class="row mb-3">
@@ -21,13 +21,21 @@
     </div>
 
     <div class="row card-cascade-parent">
-        <div class="col-md-8 pt-md-0 pt-5">
-            <pulpe-profile-infos [member]="member"></pulpe-profile-infos>
-        </div>
-        <div class="col-md-4">
-            <pulpe-profile-photo></pulpe-profile-photo>
+        <div class="col-md-12">
+            <md-card class="pt-0 white">
+                <div class="row">
+                    <div class="col-md-4">
+                        <pulpe-profile-photo>
+                        </pulpe-profile-photo>
+                    </div>
+                    <div class="col-md-8">
+                        <pulpe-profile-infos [member]="member"></pulpe-profile-infos>
+                    </div>
+                </div>
+            </md-card>
         </div>
     </div>
+
     <div class="row">
         <div class="col-md-12 pt-2 pb-2 btnBottomRight">
             <button md-fab class="pull-right bg-secondary" (click)="openDialogEditMember()">
