--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -14,7 +14,7 @@
             <div class="col-md-12 p-0">
                 <ul class="mynav" *ngIf="!profileService.profileIsCoach()">
                     <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']"
-                        [routerLink]="['profile', authenticationProfile.id]"
+                        [routerLink]="['profile/member/', authenticationProfile.id]"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
                             <i class="material-icons">person</i>
@@ -66,7 +66,7 @@
                 </ul>
                 <ul class="mynav" *ngIf="profileService.profileIsCoach()">
                     <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']"
-                        [routerLink]="['profile', authenticationProfile.id]"
+                        [routerLink]="['profile/coach/', authenticationProfile.id]"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
                             <i class="material-icons">person</i>
