Edit profile for a coach

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -20,7 +20,7 @@
         </div>
 
     </ng-sidebar-container>
-    <footer class="footer bg-gray" *ngIf="footerMustBeDisplayed()">
+    <footer class="footer bg-gray mt-5" *ngIf="footerMustBeDisplayed()">
         <div class="container h-100">
             <div class="row h-100">
                 <div class="col-md-6 h-100 v-center">
