--- a/front/src/app/welcome/welcome.component.html
+++ b/front/src/app/welcome/welcome.component.html
@@ -1,3 +1,6 @@
+<audio autoplay>
+    <source src="../../assets/audio/welcome.mp3" type="audio/mp3">
+</audio>
 <div class="row text-center mt-20">
     <div class="col-md-12">
         <img src="../../assets/logo-full.png" class="w-25 img-fluid">
@@ -13,3 +16,4 @@
         </div>
     </div>
 </div>
+
