--- a/front/src/app/member/profile/profile-completation/profile-completation.component.html
+++ b/front/src/app/member/profile/profile-completation/profile-completation.component.html
@@ -82,7 +82,7 @@
                         <div class="row">
                             <md-select placeholder="Choisissez votre salle" formControlName="gym"
                                        class="col-md-12 form-group">
-                                <md-option *ngFor="let gym of gyms" [value]="gym.id">
+                                <md-option *ngFor="let gym of gyms" [value]="gym._id">
                                     {{gym.name}} - {{gym.city}}
                                 </md-option>
                             </md-select>
