Add a new member

--- a/front/src/app/member/profile/profile.component.html
+++ b/front/src/app/member/profile/profile.component.html
@@ -38,7 +38,7 @@
 
     <div class="row">
         <div class="col-md-12 pt-2 pb-2 btnBottomRight">
-            <button md-fab class="pull-right bg-secondary" (click)="openDialogEditMember()">
+            <button md-fab class="pull-right bg-secondary" (click)="openMemberFormDialog(member)">
                 <i class="ion-edit edit"></i>
             </button>
         </div>
