--- a/front/src/app/coach/members/members.component.html
+++ b/front/src/app/coach/members/members.component.html
@@ -59,7 +59,7 @@
                                     mdTooltip="Consulter le programme de l'adhérent"
                                     [mdTooltipPosition]="'left'"></button>
                         </div>
-                        <div class="col-md-6" (click)="openDialogEditMember(member)">
+                        <div class="col-md-6" (click)="openMemberFormDialog(member)">
                             <button class="ion ion-edit pointer" md-mini-fab mdTooltip="Editer l'adhérent"
                                     [mdTooltipPosition]="'right'"></button>
                         </div>
@@ -71,7 +71,9 @@
 
         <div class="row">
             <div class="col-md-12 pt-2 pb-2 btnBottomRight">
-                <button md-fab class="pull-right bg-secondary" mdTooltip="Ajouter un adhérent"
+                <button md-fab class="pull-right bg-secondary"
+                        (click)="openMemberFormDialog()"
+                        mdTooltip="Ajouter un adhérent"
                         [mdTooltipPosition]="'right'">
                     <i class="ion-person-add addIcon"></i>
                 </button>
